Download dependencies from make

--- a/.azure-pipelines/unit-tests.yml
+++ b/.azure-pipelines/unit-tests.yml
@@ -192,14 +192,7 @@ jobs:
   - script: |
       sudo apt-get update
       sudo apt-get install -y llvm clang
-      mkdir -p /opt
-      sudo chmod -R 777 /opt
-      cd /opt && git clone --depth 1 --branch v3.3.0 https://github.com/nlohmann/json.git
-      cd /opt && git clone --depth 1 --branch 2018-10-01 https://github.com/google/re2.git
-      cd /opt/re2 && env CXXFLAGS="-O3 -g -fPIC" make 
-      cd /opt && git clone --depth 1 --branch 5.3.0 https://github.com/fmtlib/fmt.git
-      cd /opt/fmt && cmake -DCMAKE_POSITION_INDEPENDENT_CODE=TRUE . && make
-    displayName: build_dependencies
+    displayName: install_dependencies
 
   - script: |
       cd ./src/Datadog.Trace.ClrProfiler.Native
@@ -232,16 +225,6 @@ jobs:
       arguments: /nowarn:netsdk1138
       projects: |
         src/Datadog.Trace.ClrProfiler.Managed.Loader/Datadog.Trace.ClrProfiler.Managed.Loader.csproj
-  
-  - script: |
-      mkdir -p /opt
-      sudo chmod -R 777 /opt
-      cd /opt && git clone --depth 1 --branch v3.3.0 https://github.com/nlohmann/json.git
-      cd /opt && git clone --depth 1 --branch 2018-10-01 https://github.com/google/re2.git
-      cd /opt/re2 && env CXXFLAGS="-O3 -g -fPIC" make 
-      cd /opt && git clone --depth 1 --branch 5.3.0 https://github.com/fmtlib/fmt.git
-      cd /opt/fmt && cmake -DCMAKE_POSITION_INDEPENDENT_CODE=TRUE . && make
-    displayName: build_dependencies
 
   - script: |
       cd ./src/Datadog.Trace.ClrProfiler.Native
