--- a/.azure-pipelines/unit-tests.yml
+++ b/.azure-pipelines/unit-tests.yml
@@ -196,7 +196,7 @@ jobs:
 
   - script: |
       cd ./src/Datadog.Trace.ClrProfiler.Native
-      cmake .
+      CXX=clang++ CC=clang cmake .
       make
     displayName: build_profiler
 
