--- a/src/Datadog.Trace.ClrProfiler.Native/CMakeLists.txt
+++ b/src/Datadog.Trace.ClrProfiler.Native/CMakeLists.txt
@@ -8,7 +8,7 @@ project("Datadog.Trace.ClrProfiler.Native" VERSION 1.21.2)
 option(OSX "Setting compilation for OSX" ${APPLE})
 
 # Set output folders
-SET(OUTPUT_BIN_DIR ${CMAKE_BINARY_DIR}/bin/${CMAKE_SYSTEM_NAME}_${CMAKE_SYSTEM_PROCESSOR})
+SET(OUTPUT_BIN_DIR ${CMAKE_BINARY_DIR}/bin)
 SET(OUTPUT_TMP_DIR ${CMAKE_BINARY_DIR}/tmp.${CMAKE_SYSTEM_NAME}_${CMAKE_SYSTEM_PROCESSOR})
 SET(OUTPUT_DEPS_DIR ${CMAKE_BINARY_DIR}/deps)
 FILE(MAKE_DIRECTORY ${OUTPUT_BIN_DIR})
