--- a/src/Datadog.Trace.ClrProfiler.Native/CMakeLists.txt
+++ b/src/Datadog.Trace.ClrProfiler.Native/CMakeLists.txt
@@ -4,8 +4,41 @@ cmake_policy(SET CMP0015 NEW)
 # Project definition
 project("Datadog.Trace.ClrProfiler.Native" VERSION 1.21.2)
 
-# Build options
-option(OSX "Setting compilation for OSX" ${APPLE})
+# ******************************************************
+# Environment detection
+# ******************************************************
+
+# Detect bitness of the build
+if (CMAKE_SIZEOF_VOID_P EQUAL 8)
+    SET(BIT64 true)
+endif()
+
+# Detect operating system
+if (CMAKE_SYSTEM_NAME MATCHES "Windows")
+    message(FATAL_ERROR "Windows builds are not supported using CMAKE. Please use Visual Studio")
+    SET(ISWINDOWS true)
+elseif (CMAKE_SYSTEM_NAME MATCHES "Linux")
+    message(STATUS "Preparing Linux build")
+    SET(ISLINUX true)
+elseif (CMAKE_SYSTEM_NAME MATCHES "Darwin")
+    message(STATUS "Preparing macOS build")
+    SET(ISMACOS true)
+endif()
+
+# Detect architecture
+if (CMAKE_SYSTEM_PROCESSOR STREQUAL x86_64 OR CMAKE_SYSTEM_PROCESSOR STREQUAL amd64)
+    SET(ISAMD64 true)
+elseif (CMAKE_SYSTEM_PROCESSOR STREQUAL x86 OR CMAKE_SYSTEM_PROCESSOR STREQUAL i686)
+    SET(ISX86 true)
+elseif (CMAKE_SYSTEM_PROCESSOR STREQUAL aarch64)
+    SET(ISARM64 true)
+elseif (CMAKE_SYSTEM_PROCESSOR STREQUAL armv7l OR CMAKE_SYSTEM_PROCESSOR STREQUAL arm)
+    SET(ISARM true)
+endif()
+
+# ******************************************************
+# Output folders
+# ******************************************************
 
 # Set output folders
 SET(OUTPUT_BIN_DIR ${CMAKE_BINARY_DIR}/bin)
@@ -19,12 +52,9 @@ SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${OUTPUT_BIN_DIR})
 SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${OUTPUT_BIN_DIR})
 SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${OUTPUT_BIN_DIR})
 
-# Detect bitness of the build
-if (CMAKE_SIZEOF_VOID_P EQUAL 8)
-    SET(BIT64 true)
-else()
-    SET(BIT64 false)
-endif()
+# ******************************************************
+# Dependencies
+# ******************************************************
 
 # Prepare dependencies
 if (NOT EXISTS ${OUTPUT_DEPS_DIR}/json)
@@ -54,115 +84,77 @@ endif()
 # Set Managed Loader folder
 SET(MANAGED_LOADER_DIRECTORY ${CMAKE_SOURCE_DIR}/../bin/ProfilerResources/netcoreapp2.0)
 
-if (OSX)
-    message(STATUS "Preparing OSX build.")
-
-    add_compile_options(-std=c++11 -stdlib=libc++ -fPIC -fms-extensions)
-    add_compile_options(-DPAL_STDCPP_COMPAT -DPLATFORM_UNIX=1 -DUNICODE -DOSX)
-    add_compile_options(-Wno-invalid-noreturn -Wno-macro-redefined -Wno-pragma-pack)
-    if (BIT64)
-        add_compile_options(-DBIT64)
-    endif (BIT64)
-
+# Set specific custom commands to embed the loader
+if (ISMACOS)
     add_custom_command(
             OUTPUT ${OUTPUT_TMP_DIR}/Datadog.Trace.ClrProfiler.Managed.Loader.dll.o
             COMMAND cd ${OUTPUT_TMP_DIR} && touch stub.c && gcc -o stub.o -c stub.c && cp ${MANAGED_LOADER_DIRECTORY}/Datadog.Trace.ClrProfiler.Managed.Loader.dll Datadog.Trace.ClrProfiler.Managed.Loader.dll && ld -r -o Datadog.Trace.ClrProfiler.Managed.Loader.dll.o -sectcreate binary dll Datadog.Trace.ClrProfiler.Managed.Loader.dll stub.o
             DEPENDS ${MANAGED_LOADER_DIRECTORY}/Datadog.Trace.ClrProfiler.Managed.Loader.dll ${OUTPUT_DEPS_DIR}/json ${OUTPUT_DEPS_DIR}/re2 ${OUTPUT_DEPS_DIR}/fmt
     )
-
     add_custom_command(
             OUTPUT ${OUTPUT_TMP_DIR}/Datadog.Trace.ClrProfiler.Managed.Loader.pdb.o
             COMMAND cd ${OUTPUT_TMP_DIR} && touch stub.c && gcc -o stub.o -c stub.c && cp "${MANAGED_LOADER_DIRECTORY}/Datadog.Trace.ClrProfiler.Managed.Loader.pdb" Datadog.Trace.ClrProfiler.Managed.Loader.pdb && ld -r -o Datadog.Trace.ClrProfiler.Managed.Loader.pdb.o -sectcreate binary pdb Datadog.Trace.ClrProfiler.Managed.Loader.pdb stub.o
             DEPENDS ${MANAGED_LOADER_DIRECTORY}/Datadog.Trace.ClrProfiler.Managed.Loader.pdb ${OUTPUT_DEPS_DIR}/json ${OUTPUT_DEPS_DIR}/re2 ${OUTPUT_DEPS_DIR}/fmt
     )
-    SET(GENERATED_OBJ_FILES
+elseif(ISLINUX)
+    add_custom_command(
+            OUTPUT ${OUTPUT_TMP_DIR}/Datadog.Trace.ClrProfiler.Managed.Loader.dll.o
+            COMMAND cd ${OUTPUT_TMP_DIR} && cp "${MANAGED_LOADER_DIRECTORY}/Datadog.Trace.ClrProfiler.Managed.Loader.dll" Datadog.Trace.ClrProfiler.Managed.Loader.dll && ld -r -b binary -o Datadog.Trace.ClrProfiler.Managed.Loader.dll.o Datadog.Trace.ClrProfiler.Managed.Loader.dll
+            DEPENDS ${MANAGED_LOADER_DIRECTORY}/Datadog.Trace.ClrProfiler.Managed.Loader.dll ${OUTPUT_DEPS_DIR}/json ${OUTPUT_DEPS_DIR}/re2 ${OUTPUT_DEPS_DIR}/fmt
+    )
+    add_custom_command(
+            OUTPUT ${OUTPUT_TMP_DIR}/Datadog.Trace.ClrProfiler.Managed.Loader.pdb.o
+            COMMAND cd ${OUTPUT_TMP_DIR} && cp "${MANAGED_LOADER_DIRECTORY}/Datadog.Trace.ClrProfiler.Managed.Loader.pdb" Datadog.Trace.ClrProfiler.Managed.Loader.pdb && ld -r -b binary -o Datadog.Trace.ClrProfiler.Managed.Loader.pdb.o Datadog.Trace.ClrProfiler.Managed.Loader.pdb
+            DEPENDS ${MANAGED_LOADER_DIRECTORY}/Datadog.Trace.ClrProfiler.Managed.Loader.pdb ${OUTPUT_DEPS_DIR}/json ${OUTPUT_DEPS_DIR}/re2 ${OUTPUT_DEPS_DIR}/fmt
+    )
+endif()
+SET(GENERATED_OBJ_FILES
         ${OUTPUT_TMP_DIR}/Datadog.Trace.ClrProfiler.Managed.Loader.dll.o
         ${OUTPUT_TMP_DIR}/Datadog.Trace.ClrProfiler.Managed.Loader.pdb.o
-    )
-    SET_SOURCE_FILES_PROPERTIES(
+        )
+SET_SOURCE_FILES_PROPERTIES(
         ${GENERATED_OBJ_FILES}
         PROPERTIES
         EXTERNAL_OBJECT false
         GENERATED true
-    )
+)
 
-    include_directories("Datadog.Trace.ClrProfiler.Native.static"
-            ./lib/coreclr/src/pal/inc/rt
-            ./lib/coreclr/src/pal/prebuilt/inc
-            ./lib/coreclr/src/pal/inc
-            ./lib/coreclr/src/inc
-            ./lib/spdlog/include
-            ${OUTPUT_DEPS_DIR}/fmt/include
-            ${OUTPUT_DEPS_DIR}/re2
-            ${OUTPUT_DEPS_DIR}/json/include
-    )
+# ******************************************************
+# Compiler options
+# ******************************************************
 
-    add_library("Datadog.Trace.ClrProfiler.Native.static" STATIC
-        class_factory.cpp
-        clr_helpers.cpp
-        cor_profiler_base.cpp
-        cor_profiler.cpp
-        il_rewriter_wrapper.cpp
-        il_rewriter.cpp
-        integration_loader.cpp
-        integration.cpp
-        logging.cpp
-        metadata_builder.cpp
-        miniutf.cpp
-        sig_helpers.cpp
-        string.cpp
-        util.cpp
-        ${GENERATED_OBJ_FILES}
-    )
-
-    set_target_properties("Datadog.Trace.ClrProfiler.Native.static" PROPERTIES PREFIX "")
-
-    target_link_libraries("Datadog.Trace.ClrProfiler.Native.static"
-            ${OUTPUT_DEPS_DIR}/re2/obj/libre2.a
-            ${OUTPUT_DEPS_DIR}/fmt/libfmt.a
-    )
-
-    add_library("Datadog.Trace.ClrProfiler.Native" SHARED
-            dllmain.cpp
-            interop.cpp
-            ${GENERATED_OBJ_FILES}
-    )
-
-else()
-    message(STATUS "Preparing Linux build.")
-
+# Sets the compiler
+if(ISLINUX)
     SET (CMAKE_C_COMPILER   /usr/bin/clang)
     SET (CMAKE_CXX_COMPILER /usr/bin/clang++)
+endif()
 
-    add_compile_options(-std=c++11 -fPIC -fms-extensions)
-    add_compile_options(-DPAL_STDCPP_COMPAT -DPLATFORM_UNIX -DUNICODE -DLINUX)
-    add_compile_options(-Wno-invalid-noreturn -Wno-macro-redefined -Wno-pragmas)
-    if (BIT64)
-        add_compile_options(-DBIT64)
-    endif (BIT64)
+# Sets compiler options
+add_compile_options(-std=c++11 -fPIC -fms-extensions)
+add_compile_options(-DPAL_STDCPP_COMPAT -DPLATFORM_UNIX -DUNICODE)
+add_compile_options(-Wno-invalid-noreturn -Wno-macro-redefined)
+if (ISMACOS)
+    add_compile_options(-stdlib=libc++ -DMACOS -Wno-pragma-pack)
+elseif(ISLINUX)
+    add_compile_options(-DLINUX -Wno-pragmas)
+endif()
+if (BIT64)
+    add_compile_options(-DBIT64)
+endif()
+if (ISAMD64)
+    add_compile_options(-DAMD64)
+elseif (ISX86)
+    add_compile_options(-DBX86)
+elseif (ISARM64)
+    add_compile_options(-DARM64)
+elseif (ISARM)
+    add_compile_options(-DARM)
+endif()
 
-    add_custom_command(
-        OUTPUT ${OUTPUT_TMP_DIR}/Datadog.Trace.ClrProfiler.Managed.Loader.dll.o
-        COMMAND cd ${OUTPUT_TMP_DIR} && cp "${MANAGED_LOADER_DIRECTORY}/Datadog.Trace.ClrProfiler.Managed.Loader.dll" Datadog.Trace.ClrProfiler.Managed.Loader.dll && ld -r -b binary -o Datadog.Trace.ClrProfiler.Managed.Loader.dll.o Datadog.Trace.ClrProfiler.Managed.Loader.dll
-        DEPENDS ${MANAGED_LOADER_DIRECTORY}/Datadog.Trace.ClrProfiler.Managed.Loader.dll ${OUTPUT_DEPS_DIR}/json ${OUTPUT_DEPS_DIR}/re2 ${OUTPUT_DEPS_DIR}/fmt
-    )
-    add_custom_command(
-        OUTPUT ${OUTPUT_TMP_DIR}/Datadog.Trace.ClrProfiler.Managed.Loader.pdb.o
-        COMMAND cd ${OUTPUT_TMP_DIR} && cp "${MANAGED_LOADER_DIRECTORY}/Datadog.Trace.ClrProfiler.Managed.Loader.pdb" Datadog.Trace.ClrProfiler.Managed.Loader.pdb && ld -r -b binary -o Datadog.Trace.ClrProfiler.Managed.Loader.pdb.o Datadog.Trace.ClrProfiler.Managed.Loader.pdb
-        DEPENDS ${MANAGED_LOADER_DIRECTORY}/Datadog.Trace.ClrProfiler.Managed.Loader.pdb ${OUTPUT_DEPS_DIR}/json ${OUTPUT_DEPS_DIR}/re2 ${OUTPUT_DEPS_DIR}/fmt
-    )
-    SET(GENERATED_OBJ_FILES
-        ${OUTPUT_TMP_DIR}/Datadog.Trace.ClrProfiler.Managed.Loader.dll.o
-        ${OUTPUT_TMP_DIR}/Datadog.Trace.ClrProfiler.Managed.Loader.pdb.o
-    )
-    SET_SOURCE_FILES_PROPERTIES(
-        ${GENERATED_OBJ_FILES}
-        PROPERTIES
-        EXTERNAL_OBJECT false
-        GENERATED true
-    )
-
-    add_library("Datadog.Trace.ClrProfiler.Native.static" STATIC
+# ******************************************************
+# Define static target
+# ******************************************************
+add_library("Datadog.Trace.ClrProfiler.Native.static" STATIC
         class_factory.cpp
         clr_helpers.cpp
         cor_profiler_base.cpp
@@ -178,9 +170,12 @@ else()
         string.cpp
         util.cpp
         ${GENERATED_OBJ_FILES}
-    )
-    set_target_properties("Datadog.Trace.ClrProfiler.Native.static" PROPERTIES PREFIX "")
-    target_include_directories("Datadog.Trace.ClrProfiler.Native.static"
+        )
+
+set_target_properties("Datadog.Trace.ClrProfiler.Native.static" PROPERTIES PREFIX "")
+
+# Define directories includes
+target_include_directories("Datadog.Trace.ClrProfiler.Native.static"
         PUBLIC lib/coreclr/src/pal/inc/rt
         PUBLIC lib/coreclr/src/pal/prebuilt/inc
         PUBLIC lib/coreclr/src/pal/inc
@@ -189,22 +184,40 @@ else()
         PUBLIC ${OUTPUT_DEPS_DIR}/fmt/include
         PUBLIC ${OUTPUT_DEPS_DIR}/re2
         PUBLIC ${OUTPUT_DEPS_DIR}/json/include
-    )
+        )
+
+# Define linker libraries
+if (ISMACOS)
     target_link_libraries("Datadog.Trace.ClrProfiler.Native.static"
         ${OUTPUT_DEPS_DIR}/re2/obj/libre2.a
         ${OUTPUT_DEPS_DIR}/fmt/libfmt.a
-        -static-libgcc
-        -static-libstdc++
-    )
+        )
+elseif(ISLINUX)
+    target_link_libraries("Datadog.Trace.ClrProfiler.Native.static"
+            ${OUTPUT_DEPS_DIR}/re2/obj/libre2.a
+            ${OUTPUT_DEPS_DIR}/fmt/libfmt.a
+            -static-libgcc
+            -static-libstdc++
+            )
+endif()
 
+# ******************************************************
+# Define shared target
+# ******************************************************
+if (ISMACOS)
+    add_library("Datadog.Trace.ClrProfiler.Native" SHARED
+            dllmain.cpp
+            interop.cpp
+            ${GENERATED_OBJ_FILES}
+    )
+else()
     add_library("Datadog.Trace.ClrProfiler.Native" SHARED
         dllmain.cpp
         interop.cpp
     )
-
-endif(OSX)
+endif()
 
 set_target_properties("Datadog.Trace.ClrProfiler.Native" PROPERTIES PREFIX "")
-target_link_libraries("Datadog.Trace.ClrProfiler.Native" "Datadog.Trace.ClrProfiler.Native.static")
 
-unset(OSX CACHE)
+# Define linker libraries
+target_link_libraries("Datadog.Trace.ClrProfiler.Native" "Datadog.Trace.ClrProfiler.Native.static")
