--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,10 @@ stages:
   - binary_build
   
 variables:
-  DATADOG_AGENT_WINBUILDIMAGES: v3324313-6d0a8f4
+  ## DBTODO this is the current branch of -buildimages.  Once the common
+  ## container is merged to master, then this needs to be updated with the
+  ## resulting tag prior to merging
+  DATADOG_AGENT_WINBUILDIMAGES: v3599352-d498c03
     
 driver_build:
   only:
