--- a/.azure-pipelines/integration-tests.yml
+++ b/.azure-pipelines/integration-tests.yml
@@ -285,12 +285,6 @@ jobs:
   - task: NuGetToolInstaller@1
     displayName: install nuget
 
-  - task: NuGetCommand@2
-    displayName: nuget restore
-    inputs:
-      restoreSolution: Datadog.Trace.sln
-      verbosityRestore: Normal
-
   - task: DotNetCoreCLI@2
     displayName: dotnet build
     inputs:
@@ -423,13 +417,30 @@ jobs:
   - task: NuGetToolInstaller@1
     displayName: install nuget
 
+  - task: DotNetCoreCLI@2
+    displayName: dotnet build
+    inputs:
+      command: build
+      configuration: $(buildConfiguration)
+      arguments: /nowarn:netsdk1138
+      projects: |
+        src/**/*.csproj
+
   - task: NuGetCommand@2
     displayName: nuget restore
     inputs:
-      restoreSolution: Datadog.Trace.sln
+      restoreSolution: Datadog.Trace.Native.sln
       verbosityRestore: Normal
 
-  # this triggers a dependency chain that builds all the managed and native dlls
+  - task: MSBuild@1
+    displayName: msbuild
+    inputs:
+      solution: Datadog.Trace.proj
+      platform: $(buildPlatform)
+      configuration: $(buildConfiguration)
+      msbuildArguments: /t:BuildCpp
+      maximumCpuCount: true
+
   - task: MSBuild@1
     displayName: msbuild tracer-home
     inputs:
