--- a/.azure-pipelines/integration-tests.yml
+++ b/.azure-pipelines/integration-tests.yml
@@ -276,31 +276,13 @@ jobs:
   - task: NuGetToolInstaller@1
     displayName: install nuget
 
-  - task: DotNetCoreCLI@2
-    displayName: dotnet build
-    inputs:
-      command: build
-      configuration: $(buildConfiguration)
-      arguments: /nowarn:netsdk1138
-      projects: |
-        src/**/*.csproj
-        !src/Datadog.Trace.Tools.Runner/*.csproj
-
   - task: NuGetCommand@2
     displayName: nuget restore
     inputs:
       restoreSolution: Datadog.Trace.sln
       verbosityRestore: Normal
 
-  - task: MSBuild@1
-    displayName: msbuild
-    inputs:
-      solution: Datadog.Trace.proj
-      platform: $(buildPlatform)
-      configuration: $(buildConfiguration)
-      msbuildArguments: /t:BuildCpp
-      maximumCpuCount: true
-
+  # this triggers a dependency chain that builds all the managed and native dlls
   - task: MSBuild@1
     displayName: msbuild tracer-home
     inputs:
@@ -409,31 +391,13 @@ jobs:
   - task: NuGetToolInstaller@1
     displayName: install nuget
 
-  - task: DotNetCoreCLI@2
-    displayName: dotnet build
-    inputs:
-      command: build
-      configuration: $(buildConfiguration)
-      arguments: /nowarn:netsdk1138
-      projects: |
-        src/**/*.csproj
-        !src/Datadog.Trace.Tools.Runner/*.csproj
-
   - task: NuGetCommand@2
     displayName: nuget restore
     inputs:
       restoreSolution: Datadog.Trace.sln
       verbosityRestore: Normal
 
-  - task: MSBuild@1
-    displayName: msbuild
-    inputs:
-      solution: Datadog.Trace.proj
-      platform: $(buildPlatform)
-      configuration: $(buildConfiguration)
-      msbuildArguments: /t:BuildCpp
-      maximumCpuCount: true
-
+  # this triggers a dependency chain that builds all the managed and native dlls
   - task: MSBuild@1
     displayName: msbuild tracer-home
     inputs:
