--- a/.azure-pipelines/integration-tests.yml
+++ b/.azure-pipelines/integration-tests.yml
@@ -552,12 +552,6 @@ jobs:
 
   dependsOn: build_linux_profiler_arm64
   condition: succeeded()
-  strategy:
-    matrix:
-      netcoreapp3_1:
-        publishTargetFramework: netcoreapp3.1
-      net5_0:
-        publishTargetFramework: net5.0
 
   variables:
     TestAllPackageVersions: true
@@ -575,18 +569,10 @@ jobs:
     displayName: docker-compose run build.arm64
     inputs:
       containerregistrytype: Container Registry
-      dockerComposeCommand: run -e TestAllPackageVersions=true -e buildConfiguration=$(buildConfiguration) -e publishTargetFramework=$(publishTargetFramework) build.arm64
-
-  - task: DockerCompose@0
-    displayName: docker-compose run IntegrationTests.ARM64.Core31
-    condition: eq(variables['publishTargetFramework'], 'netcoreapp3.1')
-    inputs:
-      containerregistrytype: Container Registry
-      dockerComposeCommand: run -e TestAllPackageVersions=true -e buildConfiguration=$(buildConfiguration) IntegrationTests.ARM64.Core31
+      dockerComposeCommand: run -e TestAllPackageVersions=true -e buildConfiguration=$(buildConfiguration) -e publishTargetFramework=net5.0 build.arm64
 
   - task: DockerCompose@0
     displayName: docker-compose run IntegrationTests.ARM64.Core50
-    condition: eq(variables['publishTargetFramework'], 'net5.0')
     inputs:
       containerregistrytype: Container Registry
       dockerComposeCommand: run -e TestAllPackageVersions=true -e buildConfiguration=$(buildConfiguration) IntegrationTests.ARM64.Core50
