--- a/Datadog.Trace.ClrProfiler.Managed.Loader.csproj
+++ b/Datadog.Trace.ClrProfiler.Managed.Loader.csproj
@@ -8,6 +8,9 @@
 
     <!-- NuGet -->
     <Version>1.22.0</Version>
+
+    <!-- Hide warnings for EOL .NET Core targets (e.g. netcoreapp2.0) -->
+    <CheckEolTargetFramework>false</CheckEolTargetFramework>
   </PropertyGroup>
 
 </Project>
