--- a/.azure-pipelines/packages.yml
+++ b/.azure-pipelines/packages.yml
@@ -192,7 +192,7 @@ stages:
   - job: s3_upload
 
     pool:
-      vmImage: ubuntu-20.04
+      vmImage: ubuntu-18.04
 
     steps:
     - download: current
@@ -235,7 +235,7 @@ stages:
         cat $INDEX_FILE
       displayName: Write index.txt
 
-    - script: sudo apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y --fix-missing awscli
+    - script: sudo apt-get install -y --fix-missing awscli
       displayName: Install AWS CLI
 
     - script: aws configure set aws_access_key_id $SECRET
