--- a/.azure-pipelines/packages.yml
+++ b/.azure-pipelines/packages.yml
@@ -235,7 +235,11 @@ stages:
         cat $INDEX_FILE
       displayName: Write index.txt
 
-    - script: sudo apt-get install -y --fix-missing awscli
+    - script: |
+        sudo apt-get install -y unzip python3-setuptools
+        curl "https://s3.amazonaws.com/aws-cli/awscli-bundle.zip" -o "awscli-bundle.zip"
+        unzip awscli-bundle.zip
+        python3 ./awscli-bundle/install -i /usr/local/aws -b /usr/local/bin/aws
       displayName: Install AWS CLI
 
     - script: aws configure set aws_access_key_id $SECRET
