display installed aws cli version (fix verssion command)

--- a/.azure-pipelines/packages.yml
+++ b/.azure-pipelines/packages.yml
@@ -240,7 +240,7 @@ stages:
         curl "https://s3.amazonaws.com/aws-cli/awscli-bundle.zip" -o "awscli-bundle.zip"
         unzip awscli-bundle.zip
         sudo python3 ./awscli-bundle/install -i /usr/local/aws -b /usr/local/bin/aws
-        aws version
+        aws --version
       displayName: Install AWS CLI
 
     - script: aws configure set aws_access_key_id $SECRET
