Try building the solution instead of individual projects
It's often significantly faster to do so.
There are currently some projects which _were_ being built, which will no longer be built with this approach
Should we add them to the solution, or do they need to be excluded and explictly built?

- ExpenseItDemo.netcore.csproj
- NugetProfilerVersionMismatch.TypeLoadException.csproj
- Samples.WebRequest.csproj
- BenchmarkDotNet.Autogenerated.csproj
- Samples.AspNet472.LoaderOptimizationRegKey.csproj
- Samples.AspNetCore31.csproj

This commit also disables the build and restore stages when running dotnet test
As we know that's already been run

--- a/.azure-pipelines/unit-tests.yml
+++ b/.azure-pipelines/unit-tests.yml
@@ -82,11 +82,7 @@ jobs:
       command: build
       configuration: $(buildConfiguration)
       arguments: /nowarn:netsdk1138 #-l:DatadogLogger,"$(DD_DOTNET_TRACER_MSBUILD)"
-      projects: |
-        src/**/*.csproj
-        test/**/*.Tests.csproj
-        test/benchmarks/**/*.csproj
-        !src/Datadog.Trace.Tools.Runner/*.csproj
+      projects: Datadog.Trace.sln
     env:
       DD_SERVICE_NAME: dd-tracer-dotnet
 
@@ -96,6 +92,7 @@ jobs:
       command: test
       configuration: $(buildConfiguration)
       projects: test/**/*.Tests.csproj
+      arguments: --no-build --no-restore
     env:
       DD_SERVICE_NAME: dd-tracer-dotnet
 
