Publish the profiler logs as artifact instead of tailing them (#1181)

--- a/.azure-pipelines/integration-tests.yml
+++ b/.azure-pipelines/integration-tests.yml
@@ -116,6 +116,10 @@ jobs:
       containerregistrytype: Container Registry
       dockerComposeCommand: run -e TestAllPackageVersions=true -e buildConfiguration=$(buildConfiguration) -e publishTargetFramework=$(publishTargetFramework) IntegrationTests
 
+  - publish: dotnet-tracer-native.log
+    artifact: $(Agent.JobName)_profiler-logs
+    condition: succeededOrFailed()
+
   - task: PublishTestResults@2
     displayName: publish test results
     inputs:
@@ -233,6 +237,10 @@ jobs:
     inputs:
       containerregistrytype: Container Registry
       dockerComposeCommand: run -e TestAllPackageVersions=true -e buildConfiguration=$(buildConfiguration) IntegrationTests.Alpine.Core50
+
+  - publish: dotnet-tracer-native.log
+    artifact: $(Agent.JobName)_profiler-logs
+    condition: succeededOrFailed()
 
   - task: PublishTestResults@2
     displayName: publish test results
@@ -575,6 +583,10 @@ jobs:
     inputs:
       containerregistrytype: Container Registry
       dockerComposeCommand: run -e TestAllPackageVersions=true -e buildConfiguration=$(buildConfiguration) IntegrationTests.ARM64.Core50
+
+  - publish: dotnet-tracer-native.log
+    artifact: $(Agent.JobName)_profiler-logs
+    condition: succeededOrFailed()
 
   - task: PublishTestResults@2
     displayName: publish test results
