Adding sample projects.

--- a/test/test-applications/integrations/Samples.OracleMDA.Core/Samples.OracleMDA.Core.csproj
+++ b/test/test-applications/integrations/Samples.OracleMDA.Core/Samples.OracleMDA.Core.csproj
@@ -21,5 +21,12 @@
     <ProjectReference Include="..\dependency-libs\Samples.DatabaseHelper.netstandard\Samples.DatabaseHelper.netstandard.csproj" />
   </ItemGroup>
 
+  <ItemGroup Condition="'$(TargetFramework)' != 'net452'">
+    <PackageReference Include="System.Security.Permissions" Version="5.0.0" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="5.0.0" />
+    <PackageReference Include="System.Management" Version="5.0.0" />
+    <PackageReference Include="System.Text.Encoding" Version="4.3.0" />
+    <PackageReference Include="System.Text.Encoding.CodePages" Version="5.0.0" />
+  </ItemGroup>
 
 </Project>
