--- a/src/Shared-Src/Datadog.Logging.Demo/Datadog.Logging.Demo.csproj
+++ b/src/Shared-Src/Datadog.Logging.Demo/Datadog.Logging.Demo.csproj
@@ -1,13 +1,8 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <RootNamespace>Datadog.AutoInstrumentation.ManagedLoader</RootNamespace>
-    <TargetFrameworks Condition="'$(OS)' == 'Windows_NT'">net45;netcoreapp2.0</TargetFrameworks>
-    <TargetFrameworks Condition="'$(OS)' != 'Windows_NT'">netcoreapp2.0</TargetFrameworks>
-    <OutputPath>..\bin\ProfilerResources\</OutputPath>
-
-    <!-- Hide warnings for EOL .NET Core targets (e.g. netcoreapp2.0) -->
-    <CheckEolTargetFramework>false</CheckEolTargetFramework>
+    <OutputType>Exe</OutputType>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <!-- Datadog.Logging.Emission.props is required for emitting logs: -->
@@ -15,22 +10,21 @@
 
   <!-- Datadog.Logging.Composition.props is required for composing logs and chosing a log sink: -->
   <Import Project="..\..\Shared-Src\Datadog.Logging\Datadog.Logging.Composition.props" Condition="$(LogCompositionPropsIncluded) == ''" />
-
-
+	
   <ItemGroup>
 	<!-- This "service" is required for T4-templating.                                                                                   -->
 	<Service Include="{508349b6-6b84-4df5-91f0-309beebad82d}" />
 	<T4ServiceGuidIncluded Include="true" />
   </ItemGroup>
 
-	<ItemGroup>
+  <ItemGroup>
     <!-- Log.tt is a T4 template that refers to the Log.tt.cs templete referenced in Datadog.Logging.Emission.props.                     -->
     <!-- It ensures that the Log Emission API is correctly generated.                                                                    -->
-    <None Update="Datadog.AutoInstrumentation.ManagedLoader\internal\Log.tt">
+    <None Update="Datadog.Logging.Demo\public\Log.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>Log.cs</LastGenOutput>
     </None>
-    <Compile Update="Datadog.AutoInstrumentation.ManagedLoader\internal\Log.cs">
+    <Compile Update="Datadog.Logging.Demo\public\Log.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
       <DependentUpon>Log.tt</DependentUpon>
@@ -40,15 +34,15 @@
   <ItemGroup>
     <!-- LogComposer.tt is a T4 template that refers to the LogComposer.tt.cs templete referenced in Datadog.Logging.Composition.props.  -->
     <!-- It ensures that the Log Composition API is correctly generated.                                                                 -->
-    <None Update="Datadog.AutoInstrumentation.ManagedLoader\internal\LogComposer.tt">
+    <None Update="Datadog.Logging.Demo\internal\LogComposer.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>LogComposer.cs</LastGenOutput>
     </None>
-    <Compile Update="Datadog.AutoInstrumentation.ManagedLoader\internal\LogComposer.cs">
+    <Compile Update="Datadog.Logging.Demo\internal\LogComposer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
       <DependentUpon>LogComposer.tt</DependentUpon>
     </Compile>
   </ItemGroup>
-  
+
 </Project>
