More logging improvements

--- a/src/Shared-Src/Datadog.Logging/Datadog.Logging.Composition.props
+++ b/src/Shared-Src/Datadog.Logging/Datadog.Logging.Composition.props
@@ -17,6 +17,7 @@
     <IncludedSharedLogCompositionCompileItem Include="$(MSBuildThisFileDirectory)..\Datadog.Logging.Composition\internal\LoggingComponentName.cs" />
     <IncludedSharedLogCompositionCompileItem Include="$(MSBuildThisFileDirectory)..\Datadog.Logging.Composition\internal\SimpleConsoleLogSink.cs" />
     <IncludedSharedLogCompositionCompileItem Include="$(MSBuildThisFileDirectory)..\Datadog.Logging.Composition\internal\AggregatedLogSink.cs" />
+    <IncludedSharedLogCompositionCompileItem Include="$(MSBuildThisFileDirectory)..\Datadog.Logging.Composition\internal\ComponentGroupCompositionLogSink.cs" />
     <IncludedSharedLogCompositionCompileItem Include="$(MSBuildThisFileDirectory)..\Datadog.Logging.Composition\internal\FileLogSink.cs" />
     <IncludedSharedLogCompositionCompileItem Include="$(MSBuildThisFileDirectory)..\Datadog.Logging.Composition\internal\LogGroupMutex.cs" />
     <IncludedSharedLogCompositionCompileItem Include="$(MSBuildThisFileDirectory)..\Datadog.Logging.Composition\internal\DatadogEnvironmentFileLogSinkFactory.cs" />
